Fixed fab on mobile.

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -324,7 +324,7 @@ td{
     }
 
     #contactfab{
-        position: absolute;
+        position: fixed;
         bottom: 20px;
         right: 20px;
     }
